[B]1.0.1:[/B]
 - přidána podpora vyhledávání
 - opraveno : nezobrazují se všechna videa na stránce
[B]1.0.0:[/B]
Initial version